--- a/70-rule.html
+++ b/70-rule.html
@@ -1,238 +1,156 @@
 <!DOCTYPE html>
-<html lang="en"><head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>70% Rule (House Flipping) Calculator</title>
-<meta content="Easily calculate the 70% Rule for house flipping to ensure profitable investments." name="description"/>
-<meta content="Ugo Candido" name="author"/>
-<link href="https://calcdomain.com/70-rule.html" rel="canonical"/>
-<style>
-        /* Critical CSS above-the-fold */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 1rem;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        .calculator-layout {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 2rem;
-        }
-        @media (min-width: 768px) {
-            .calculator-layout {
-                grid-template-columns: 1fr 1fr;
-            }
-        }
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-        }
-        .form-control {
-            width: 100%;
-            padding: 0.5rem;
-            font-size: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .results-container {
-            padding: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            background-color: #f9f9f9;
-        }
-        .result-item {
-            display: flex;
-            justify-content: space-between;
-            padding: 0.5rem 0;
-        }
-        .result-label {
-            color: #666;
-        }
-        .result-value {
-            font-weight: bold;
-            color: #28a745;
-        }
-    </style>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "70% Rule (House Flipping) Calculator",
-  "description": "Calculate the 70% Rule for house flipping to ensure profitable investments.",
-  "url": "https://calcdomain.com/70-rule.html",
-  "author": {
-    "@type": "Person",
-    "name": "Ugo Candido"
-  },
-  "publisher": {
-    "@type": "Organization",
-    "name": "Landlord Studio"
-  },
-  "mainEntity": {
-    "@type": "FAQPage",
-    "mainEntity": [
-      {
-        "@type": "Question",
-        "name": "What is the 70% rule in house flipping?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "The 70% rule is a guideline for real estate investors to determine the maximum price they should pay for a property."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "How do I calculate the 70% rule?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Multiply the After Repair Value (ARV) by 70% and subtract the estimated repair costs."
-        }
-      }
-    ]
-  }
-}
-  </script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
-<script>
-  window.MathJax = {
-    tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
-    },
-    svg: { fontCache: 'global' }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
-
+<html lang="en">
+<head>
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>70% Rule (House Flipping) Calculator</title>
+  <meta name="description" content="Easily calculate the 70% Rule for house flipping to ensure profitable investments.">
+  <link rel="canonical" href="https://calcdomain.com/70-rule.html"/>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="search.js" defer></script>
 </head>
-<body>
+<body class="bg-gray-50 text-gray-900">
+  <!-- Header -->
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="container mx-auto px-4 lg:px-6 py-4">
+      <div class="flex justify-between items-center">
+        <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+        <div class="w-full max-w-md hidden md:block mx-8">
+          <div class="relative">
+            <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500" autocomplete="off">
+          </div>
+        </div>
+        <div class="hidden md:flex items-center space-x-6 text-sm">
+          <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+        <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+      <div id="mobile-menu" class="md:hidden mt-4 hidden">
+        <div class="space-y-2">
+          <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="container mx-auto px-4 lg:px-6 py-10">
+    <div class="flex flex-col lg:flex-row gap-8">
+      <section class="w-full lg:w-2/3">
+        <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+          <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+          <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
+          <span class="text-gray-900">70% Rule Calculator</span>
+        </nav>
+        <div id="print-section" class="bg-white p-6 rounded-lg shadow-md">
+          <h1 class="text-3xl font-extrabold text-gray-900 mb-2">70% Rule (House Flipping) Calculator</h1>
+          <p class="text-gray-600 mb-6">Determine the max price you should pay for a fixer-upper, ensuring a profit after repairs and selling costs.</p>
+          <!-- Calculator Form -->
+          <form class="space-y-6" id="houseFlippingCalculator" autocomplete="off">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+              <div>
+                <label for="arv" class="block text-sm font-medium text-gray-700">After Repair Value (ARV) *</label>
+                <input id="arv" placeholder="e.g., 200000" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" type="number" step="any" required>
+              </div>
+              <div>
+                <label for="repairCosts" class="block text-sm font-medium text-gray-700">Estimated Repair Costs *</label>
+                <input id="repairCosts" placeholder="e.g., 30000" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" type="number" step="any" required>
+              </div>
+            </div>
+            <button type="button" onclick="calculate70Rule()" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Calculate</button>
+          </form>
+          <!-- Results -->
+          <div id="results" class="mt-8 bg-blue-50 border border-blue-100 rounded-lg p-6">
+            <h2 class="text-lg font-semibold text-gray-800 mb-3">Results</h2>
+            <div class="result-card bg-white border p-4 rounded-lg flex flex-col items-center">
+              <span class="font-semibold text-gray-700 mb-2">Maximum Purchase Price:</span>
+              <span class="text-2xl font-bold text-blue-700" id="maxPrice">$0.00</span>
+            </div>
+          </div>
+          <section class="mt-10 prose">
+            <h2>How the 70% Rule Works</h2>
+            <ul>
+              <li>The 70% Rule is a quick way for real estate investors to estimate the highest price to offer on a property to flip, after repairs and selling costs.</li>
+              <li><strong>Formula:</strong> <span class="font-mono bg-gray-100 px-2 py-1 rounded">Maximum Purchase Price = ARV × 0.70 − Repair Costs</span></li>
+              <li><strong>ARV</strong>: After Repair Value, what the property should sell for, fixed up.</li>
+              <li>Subtract estimated repairs, and you have budget room for profit and closing costs.</li>
+            </ul>
 
-<a class="skip-link" href="#main-content">Skip to main content</a>
-<header>
-<div class="container">
-<h1>70% Rule (House Flipping) Calculator</h1>
-</div>
-</header>
-<main class="container" id="main-content">
-<section>
-<p>This calculator helps real estate investors determine the maximum price they should pay for a property to ensure a profitable flip, adhering to the 70% rule.</p>
-</section>
-<div class="calculator-layout">
-<section class="calculator-container">
-<form id="houseFlippingCalculator">
-<div class="form-group">
-<label for="arv">After Repair Value (ARV) *</label>
-<input aria-required="true" class="form-control" id="arv" placeholder="e.g., 200000" type="number"/>
-</div>
-<div class="form-group">
-<label for="repairCosts">Estimated Repair Costs *</label>
-<input aria-required="true" class="form-control" id="repairCosts" placeholder="e.g., 30000" type="number"/>
-</div>
-<button onclick="calculate70Rule()" type="button">Calculate</button>
-</form>
-</section>
-<section class="results-container">
-<h2>Results</h2>
-<div class="result-item">
-<span class="result-label">Maximum Purchase Price:</span>
-<span class="result-value" id="maxPrice">$0.00</span>
-</div>
-</section>
-</div>
-<section>
-<h2>Data Source and Methodology</h2>
-<p>All calculations are based on the 70% rule, a standard in real estate investing. For more information, refer to <a href="https://www.biggerpockets.com/house-flip-estimation-calculator" target="_blank">BiggerPockets</a>.</p>
-</section>
-<section>
-<h2>The Formula Explained</h2>
-<div class="formula-box">
-<p><strong>Formula:</strong> <code>Maximum Purchase Price = ARV × 0.70 - Repair Costs</code></p>
-</div>
-</section>
-<section>
-<h2>Glossary of Terms</h2>
-<ul>
-<li><strong>ARV:</strong> The estimated value of a property after repairs.</li>
-<li><strong>Repair Costs:</strong> The total estimated cost of repairs needed.</li>
-<li><strong>Maximum Purchase Price:</strong> The highest price you should pay for the property.</li>
-</ul>
-</section>
-<section>
-<h2>Frequently Asked Questions (FAQ)</h2>
-<div>
-<h3>What is the 70% rule in house flipping?</h3>
-<p>The 70% rule is a guideline for real estate investors to determine the maximum price they should pay for a property.</p>
-<h3>How do I calculate the 70% rule?</h3>
-<p>Multiply the After Repair Value (ARV) by 70% and subtract the estimated repair costs.</p>
-</div>
-</section>
-
-</main>
-<script>
-        function calculate70Rule() {
-            const arv = parseFloat(document.getElementById('arv').value) || 0;
-            const repairCosts = parseFloat(document.getElementById('repairCosts').value) || 0;
-            const maxPrice = (arv * 0.70) - repairCosts;
-            document.getElementById('maxPrice').textContent = `$${maxPrice.toFixed(2)}`;
-        }
-    </script>
-
-
-```
-<footer class="site-footer">
-<div class="container footer-content">
-<div class="footer-column">
-<h4>CalcDomain</h4>
-<p>High-precision tools for professionals.</p>
-</div>
-<div class="footer-column">
-<h4>Calculators</h4>
-<ul class="footer-links">
-<li><a href="/construction.html">Construction</a></li>
-<li><a href="/subcategories/measurement-unit-conversions.html">Conversions</a></li>
-<li><a href="/engineering.html">Engineering</a></li>
-<li><a href="/lifestyle-everyday.html">Everyday Life</a></li>
-<li><a href="/finance.html">Finance</a></li>
-<li><a href="/health-and-fitness.html">Health and Fitness</a></li>
-<li><a href="/math.html">Math</a></li>
-<li><a href="/science.html">Science</a></li>
-<li><a href="/taxation.html">Taxation</a></li>
-</ul>
-</div>
-<div class="footer-column">
-<h4>Company</h4>
-<ul>
-<li><a href="/about.html">About Us</a></li>
-<li><a href="/contact.html">Contact</a></li>
-<li><a href="/privacy.html">Privacy Policy</a></li>
-</ul>
-</div>
-</div>
-<div class="container footer-bottom">
-    © 2025 CalcDomain. All Rights Reserved.
-  </div>
-</footer>
-
-</body></html>
+            <h2>Frequently Asked Questions</h2>
+            <details>
+              <summary>What is the 70% rule in house flipping?</summary>
+              <p>A guideline for investors: pay no more than 70% of a property's after-repair value, minus repairs, to leave room for profit and costs.</p>
+            </details>
+            <details>
+              <summary>How do I calculate it?</summary>
+              <p>Multiply the ARV by 70% (0.70), subtract repairs. That's the most you should pay to flip with a safety margin.</p>
+            </details>
+            <details>
+              <summary>Should I always use the 70% rule?</summary>
+              <p>It's a ballpark. In hot markets, you may pay more; in slow ones, you might need a bigger margin. Always run the numbers in detail for every deal.</p>
+            </details>
+          </section>
+          <div class="mt-8 pt-6 border-t border-gray-200 text-sm text-gray-600">
+            Tool by <strong>Ugo Candido</strong>. For more, see <a href="https://www.biggerpockets.com/house-flip-estimation-calculator" target="_blank" rel="noopener">BiggerPockets</a>. Last reviewed: 2025.
+          </div>
+        </div>
+      </section>
+      <aside class="w-full lg:w-1/3">
+        <div class="sticky top-24 space-y-6">
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-lg font-semibold text-gray-900 mb-3">Quick Reference</h2>
+            <ul class="space-y-2 text-sm text-gray-600">
+              <li><strong>70% Rule:</strong> Only buy if the deal fits <span class="font-mono">Purchase ≤ (ARV × 0.70) − Repairs</span></li>
+              <li>Helps ensure a profit on quick flips</li>
+              <li>Budget extra for closing costs, agent fees, taxes</li>
+            </ul>
+          </div>
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-lg font-semibold text-gray-900 mb-3">Related Tools</h2>
+            <ul class="space-y-2 text-sm text-blue-600">
+              <li><a href="construction.html" class="hover:underline">Construction Estimator</a></li>
+              <li><a href="loan-amortization.html" class="hover:underline">Loan Amortization</a></li>
+              <li><a href="finance.html" class="hover:underline">All Finance Tools</a></li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </main>
+  <footer class="bg-white border-t mt-12">
+    <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+      <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+      <div class="mt-4 space-x-4">
+        <a href="about.html" class="hover:text-blue-600">About</a>
+        <a href="contact.html" class="hover:text-blue-600">Contact</a>
+        <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+        <a href="terms.html" class="hover:text-blue-600">Terms</a>
+      </div>
+    </div>
+  </footer>
+  <script>
+    function calculate70Rule() {
+      const arv = parseFloat(document.getElementById('arv').value) || 0;
+      const repairCosts = parseFloat(document.getElementById('repairCosts').value) || 0;
+      const maxPrice = (arv * 0.70) - repairCosts;
+      document.getElementById('maxPrice').textContent = maxPrice < 0
+        ? 'N/A'
+        : `$${maxPrice.toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}`;
+    }
+    document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+      const menu = document.getElementById('mobile-menu');
+      menu?.classList.toggle('hidden');
+    });
+  </script>
+</body>
+</html>
